BookForm close Button Aligned price field bug

--- a/src/assets/styles/partials/AddBookForm.scss
+++ b/src/assets/styles/partials/AddBookForm.scss
@@ -24,6 +24,7 @@ $create_btn_color: #00579c;
 
   .close-btn {
     padding-top: 0.4em;
+    text-align: right;
 
     .close-icon {
       cursor: pointer;
@@ -39,7 +40,6 @@ $create_btn_color: #00579c;
     }
 
     .book-title-input, .book-price-input, .book-author-input {
-      width: 28vw;
       border: 2px solid $input_field_border_color;
       border-radius: 0;
     }
